--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
 <!-- Write your HTML in this file -->
 
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>Cats</title>
+    <link rel="stylesheet" type="text/css" href="my_styles.css">
+  </head>
+  <body>more cats</body>
+</html>
